--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -210,7 +210,7 @@ LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
 Landscape="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 LandscapeProxy="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
-PartitionActor="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
+PartitionActor=
 MaterialExpressionLandscapeLayerBlend="\"Object\" \"Object.Layers\" "
 MaterialExpressionVectorParameter="\"Object\" \"Object.DefaultValue\" "
 GeneralProjectSettings="\"Object\" "
@@ -323,8 +323,8 @@ MaterialExpressionDoubleVectorParameter="\"Object\" "
 MaterialExpressionComposite="\"Object\" "
 MaterialExpressionPinBase="\"Object\" \"Object.ReroutePins.ReroutePins[0]\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object\" \"Object.ProceduralFoliage.DensityFalloff\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object\" \"Object.ProceduralFoliage.DensityFalloff\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 PointLight="\"Object\" \"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 Light="\"Object\" "
@@ -479,6 +479,7 @@ MaterialExpressionAppendVector="\"Object\" "
 MaterialExpressionCameraPositionWS="\"Object\" "
 MaterialExpressionConstant2Vector="\"Object\" "
 MaterialExpressionTransform="\"Object\" "
+MaterialExpressionVertexTangentWS="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/linch/OneDrive/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1446,7 +1447,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -3196,9 +3197,15 @@ LandscapeGizmoActiveActor.Rendering=True
 LandscapeGizmoActiveActor.Gizmo=True
 LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
 LandscapeGizmoActiveActor.TransformCommon=True
+MaterialExpressionVertexTangentWS.MaterialExpression=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark.ghiblibark;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0.tree1_0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial.NewMaterial;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3_leafshape2__1.tree3_leafshape2__1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0.tree3__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin/ghiblibarkfin.ghiblibarkfin;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark.ghiblibark;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2_leafshape1_1.tree2_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
@@ -3213,15 +3220,11 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree_no_te
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test.test;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02.mapleleave_mat02;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat.mapleleaves_mat;
-RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test_tree_leaves_alpha2_1.test_tree_leaves_alpha2_1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test_tree__0.test_tree__0;
-RecentlyPlaced=/Script/Water.WaterBodyLake;/Engine/Transient.WaterBodyLakeActorFactory_0
-RecentlyPlaced=/Script/Water.WaterBodyRiver;/Engine/Transient.WaterBodyRiverActorFactory_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Color,MaterialEditorInstanceConstant.ParameterGroups.Emissivity,MaterialEditorInstanceConstant.ParameterGroups.Opacity,MaterialEditorInstanceConstant.ParameterGroups.Reflections,MaterialEditorInstanceConstant.ParameterGroups.Relief,MaterialEditorInstanceConstant.ParameterGroups.UV Coordinates,MaterialEditorInstanceConstant.ParameterGroups.Weather,MaterialEditorInstanceConstant.ParameterGroups.Detail Normal Settings,MaterialEditorInstanceConstant.ParameterGroups.FluidSimulation,MaterialEditorInstanceConstant.ParameterGroups.General Foam,MaterialEditorInstanceConstant.ParameterGroups.Opacity Mask,MaterialEditorInstanceConstant.ParameterGroups.River Flowmaps,MaterialEditorInstanceConstant.ParameterGroups.TwoSided Settings,MaterialEditorInstanceConstant.ParameterGroups.Water Shading,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
@@ -3408,26 +3411,26 @@ MeshComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflecti
 LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
-MRUItem3=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_shader
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
+MRUItem6=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -3603,6 +3606,9 @@ MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_shader
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst=1
 /Engine/EngineSky/M_SimpleSkyDome.M_SimpleSkyDome=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark.ghiblibark=1
+/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark.ghiblibark=1
+/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial.NewMaterial=1
+/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin/ghiblibarkfin.ghiblibarkfin=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
