--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,7 +186,7 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -210,7 +210,7 @@ LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
 Landscape="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 LandscapeProxy="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
-PartitionActor="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
+PartitionActor=
 MaterialExpressionLandscapeLayerBlend="\"Object\" \"Object.Layers\" "
 MaterialExpressionVectorParameter="\"Object\" \"Object.DefaultValue\" "
 GeneralProjectSettings="\"Object\" "
@@ -3200,17 +3200,19 @@ LandscapeGizmoActiveActor.TransformCommon=True
 MaterialExpressionVertexTangentWS.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5_leafshape1_1.tree5_leafshape1_1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.tree5__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2_leafshape1_1.tree2_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3_leafshape2__1.tree3_leafshape2__1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0.tree3__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial.NewMaterial;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0.tree1_0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4_leafshape2__1.tree4_leafshape2__1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0.tree4__0;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial.NewMaterial;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin/ghiblibarkfin.ghiblibarkfin;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark.ghiblibark;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_leafshape1_1.tree1_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1__0.tree1__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_5_leafshape1_1.tree1_5_leafshape1_1;
@@ -3218,13 +3220,10 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_5__0
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1.tree_trunk_mat1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat.tree_trunk_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree__0.anothertree__0;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree_no_texture_1.anothertree_no_texture_1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test.test;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Color,MaterialEditorInstanceConstant.ParameterGroups.Emissivity,MaterialEditorInstanceConstant.ParameterGroups.Opacity,MaterialEditorInstanceConstant.ParameterGroups.Reflections,MaterialEditorInstanceConstant.ParameterGroups.Relief,MaterialEditorInstanceConstant.ParameterGroups.UV Coordinates,MaterialEditorInstanceConstant.ParameterGroups.Weather,MaterialEditorInstanceConstant.ParameterGroups.Detail Normal Settings,MaterialEditorInstanceConstant.ParameterGroups.FluidSimulation,MaterialEditorInstanceConstant.ParameterGroups.General Foam,MaterialEditorInstanceConstant.ParameterGroups.Opacity Mask,MaterialEditorInstanceConstant.ParameterGroups.River Flowmaps,MaterialEditorInstanceConstant.ParameterGroups.TwoSided Settings,MaterialEditorInstanceConstant.ParameterGroups.Water Shading,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
@@ -3405,21 +3404,21 @@ SkeletalMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Refl
 ProceduralFoliageBlockingVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 ProceduralFoliageVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 WaterBodyLake=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
-WaterBodyLakeComponent=
+WaterBodyLakeComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 RuntimeVirtualTextureVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 MeshComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
-MRUItem6=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
+MRUItem8=/Engine/EngineSky/M_SimpleSkyDome
 MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
 MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
 MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
@@ -3611,7 +3610,7 @@ MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin/ghiblibarkfin.ghiblibarkfin=1
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
