--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -137,6 +137,8 @@ LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5.tree5
+OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -3200,26 +3202,26 @@ LandscapeGizmoActiveActor.TransformCommon=True
 MaterialExpressionVertexTangentWS.MaterialExpression=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5_leafshape1_1.tree5_leafshape1_1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.tree5__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2.tree2;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2_leafshape1_1.tree2_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5.tree5;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3.tree3;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5_leafshape1_1.tree5_leafshape1_1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.tree5__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3_leafshape2__1.tree3_leafshape2__1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0.tree3__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4_leafshape2__1.tree4_leafshape2__1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0.tree4__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial.NewMaterial;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0.tree1_0;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4_leafshape2__1.tree4_leafshape2__1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0.tree4__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin/ghiblibarkfin.ghiblibarkfin;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark.ghiblibark;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_leafshape1_1.tree1_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1__0.tree1__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_5_leafshape1_1.tree1_5_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_5__0.tree1_5__0;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1.tree_trunk_mat1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat.tree_trunk_mat;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree__0.anothertree__0;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3227,7 +3229,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Color,MaterialEditorInstanceConstant.ParameterGroups.Emissivity,MaterialEditorInstanceConstant.ParameterGroups.Opacity,MaterialEditorInstanceConstant.ParameterGroups.Reflections,MaterialEditorInstanceConstant.ParameterGroups.Relief,MaterialEditorInstanceConstant.ParameterGroups.UV Coordinates,MaterialEditorInstanceConstant.ParameterGroups.Weather,MaterialEditorInstanceConstant.ParameterGroups.Detail Normal Settings,MaterialEditorInstanceConstant.ParameterGroups.FluidSimulation,MaterialEditorInstanceConstant.ParameterGroups.General Foam,MaterialEditorInstanceConstant.ParameterGroups.Opacity Mask,MaterialEditorInstanceConstant.ParameterGroups.River Flowmaps,MaterialEditorInstanceConstant.ParameterGroups.TwoSided Settings,MaterialEditorInstanceConstant.ParameterGroups.Water Shading,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Color,MaterialEditorInstanceConstant.ParameterGroups.Emissivity,MaterialEditorInstanceConstant.ParameterGroups.Opacity,MaterialEditorInstanceConstant.ParameterGroups.Reflections,MaterialEditorInstanceConstant.ParameterGroups.Relief,MaterialEditorInstanceConstant.ParameterGroups.UV Coordinates,MaterialEditorInstanceConstant.ParameterGroups.Weather,MaterialEditorInstanceConstant.ParameterGroups.Detail Normal Settings,MaterialEditorInstanceConstant.ParameterGroups.FluidSimulation,MaterialEditorInstanceConstant.ParameterGroups.General Foam,MaterialEditorInstanceConstant.ParameterGroups.Opacity Mask,MaterialEditorInstanceConstant.ParameterGroups.River Flowmaps,MaterialEditorInstanceConstant.ParameterGroups.TwoSided Settings,MaterialEditorInstanceConstant.ParameterGroups.Water Shading,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Pause,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Pause,
@@ -3410,26 +3412,26 @@ MeshComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflecti
 LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
-MRUItem8=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst_
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
+MRUItem10=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -3608,6 +3610,7 @@ MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark.ghiblibark=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial.NewMaterial=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin/ghiblibarkfin.ghiblibarkfin=1
+/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5.tree5=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
