LAYOUT TREE FINALE

--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,7 +197,7 @@ MaterialExpressionConstant3Vector="\"Object\" \"Object.Constant\" "
 Font="\"Object\" \"Object.Font\" "
 AssetViewerSettings="\"Object\" "
 StaticMesh="\"Object\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" "
 MapBuildDataRegistry="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSampleParameter="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSample="\"Object\" "
@@ -210,7 +210,7 @@ LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
 Landscape="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 LandscapeProxy="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
-PartitionActor=
+PartitionActor="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 MaterialExpressionLandscapeLayerBlend="\"Object\" \"Object.Layers\" "
 MaterialExpressionVectorParameter="\"Object\" \"Object.DefaultValue\" "
 GeneralProjectSettings="\"Object\" "
@@ -323,8 +323,8 @@ MaterialExpressionDoubleVectorParameter="\"Object\" "
 MaterialExpressionComposite="\"Object\" "
 MaterialExpressionPinBase="\"Object\" \"Object.ReroutePins.ReroutePins[0]\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object\" \"Object.ProceduralFoliage.DensityFalloff\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object\" \"Object.ProceduralFoliage.DensityFalloff\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 PointLight="\"Object\" \"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 Light="\"Object\" \"Object.Light.DirectionalLightComponent.Object.Light.ModulatedShadowColor\" \"Object.Light.DirectionalLightComponent.Object.Light.LightingChannels\" \"Object.Light.DirectionalLightComponent.Object.Light.LightColor\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" \"Object.Light.DirectionalLightComponent.Object.AtmosphereAndCloud.AtmosphereSunDiskColorScale\" \"Object.Light.DirectionalLightComponent.Object.AtmosphereAndCloud.CloudScatteredLuminanceScale\" "
@@ -3207,25 +3207,25 @@ ExponentialHeightFog.LOD=True
 ExponentialHeightFog.AssetUserData=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3.tree3;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial.NewMaterial;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3_leafshape2__1.tree3_leafshape2__1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0.tree3__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5.tree5;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5_leafshape1_1.tree5_leafshape1_1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.tree5__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2.tree2;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2_leafshape1_1.tree2_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4.tree4;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5.tree5;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/DefaultMaterial_Base_color_Mat.DefaultMaterial_Base_color_Mat;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/DefaultMaterial_Base_color.DefaultMaterial_Base_color;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5_leafshape1_1.tree5_leafshape1_1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.tree5__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4_leafshape2__1.tree4_leafshape2__1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0.tree4__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3_leafshape2__1.tree3_leafshape2__1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0.tree3__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3.tree3;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark.ghiblibark;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/DefaultMaterial_Base_color_Mat.DefaultMaterial_Base_color_Mat;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/DefaultMaterial_Base_color.DefaultMaterial_Base_color;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0.tree1_0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin/ghiblibarkfin.ghiblibarkfin;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark.ghiblibark;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_leafshape1_1.tree1_leafshape1_1;
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -3409,7 +3409,7 @@ WaterBrushManager=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Refl
 WaterZone=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 SkeletalMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 ProceduralFoliageBlockingVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
-ProceduralFoliageVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
+ProceduralFoliageVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 WaterBodyLake=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 WaterBodyLakeComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 RuntimeVirtualTextureVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
@@ -3418,26 +3418,26 @@ LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Refl
 PrimitiveComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst_
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
-MRUItem14=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst_
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark/ghiblibark
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibarkfin
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
+MRUItem15=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -3620,6 +3620,7 @@ MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2.tree2=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4.tree4=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3.tree3=1
+/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0.tree4__0=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
