--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -210,7 +210,7 @@ LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
 Landscape="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 LandscapeProxy="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
-PartitionActor="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
+PartitionActor=
 MaterialExpressionLandscapeLayerBlend="\"Object\" \"Object.Layers\" "
 MaterialExpressionVectorParameter="\"Object\" \"Object.DefaultValue\" "
 GeneralProjectSettings="\"Object\" "
@@ -1467,7 +1467,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees
+ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=/Game/OurProject/Maps/bedroom_scene/assets,/Game/FirstPerson/Maps,/Game/OurProject/Maps/Forest_Scene
@@ -3418,10 +3418,10 @@ LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Refl
 PrimitiveComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4
 MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2
 MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5
 MRUItem6=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
